crates/test-better-matchers/tests/ui/forgotten_question_mark.stderr
error: unused `Result` that must be used
 --> tests/ui/forgotten_question_mark.rs:9:5
  |
9 |     expect!(2 + 2).to(eq(4));
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this `Result` may be an `Err` variant, which should be handled
note: the lint level is defined here
 --> tests/ui/forgotten_question_mark.rs:4:9
  |
4 | #![deny(unused_must_use)]
  |         ^^^^^^^^^^^^^^^
help: use `let _ = ...` to ignore the resulting value
  |
9 |     let _ = expect!(2 + 2).to(eq(4));
  |     +++++++
